// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBar should render correctly with active voting and disabled timer 1`] = `
<div
  id="root"
>
  <aside
    class="info-bar"
  >
    <div
      class="vote-display"
    >
      <span
        title="VoteDisplay.tooltip"
      >
        0
         / 
        5
      </span>
    </div>
  </aside>
</div>
`;

exports[`InfoBar should render correctly with active voting and timer 1`] = `
<div
  id="root"
>
  <aside
    class="info-bar"
  >
    <div
      class="timer timer--expired"
      id="timer"
    >
      <span>
        00
        :
        00
      </span>
    </div>
    <div
      class="vote-display"
    >
      <span
        title="VoteDisplay.tooltip"
      >
        0
         / 
        5
      </span>
    </div>
  </aside>
</div>
`;

exports[`InfoBar should render correctly with disabled voting and active timer 1`] = `
<div
  id="root"
>
  <aside
    class="info-bar"
  >
    <div
      class="timer timer--expired"
      id="timer"
    >
      <span>
        00
        :
        00
      </span>
    </div>
  </aside>
</div>
`;

exports[`InfoBar should render correctly with disabled voting and timer 1`] = `
<div
  id="root"
>
  <aside
    class="info-bar"
  />
</div>
`;
